add ability to reactivate account
