# lib/server/routes/users.js
@@ -31,6 +31,35 @@ function UsersRouter(config, storage, network, mailer) {
 inherits(UsersRouter, Router);
 
 /**
+ * Sends a user activation email
+ * @private
+ */
+UsersRouter.prototype._dispactchActivationEmail = function(user, redir) {
+  let self = this;
+  let profile = self.config.server.public || self.config.server;
+  let host = profile.host;
+  let port = [443, 80].indexOf(profile.port) === -1 ?
+             ':' + profile.port :
+             '';
+  let proto = self.config.server.ssl &&
+              self.config.server.ssl.cert &&
+              self.config.server.ssl.key ?
+              'https:' :
+              'http:';
+
+  self.mailer.dispatch(user.email, 'confirm', {
+    token: user.activator,
+    redirect: redir,
+    url: proto + '//' + host + port
+  }, function(err) {
+    if (err) {
+      log.error('failed to send activation email, reason: %s', err.message);
+    }
+  });
+};
+
+
+/**
  * Registers a new user
  * @param {http.IncomingMessage} req
  * @param {http.ServerResponse} res
@@ -48,31 +77,8 @@ UsersRouter.prototype.createUser = function(req, res, next) {
       return next(err);
     }
 
-    function dispatchActivationEmail() {
-      let profile = self.config.server.public || self.config.server;
-      let host = profile.host;
-      let port = [443, 80].indexOf(profile.port) === -1 ?
-                 ':' + profile.port :
-                 '';
-      let proto = self.config.server.ssl &&
-                  self.config.server.ssl.cert &&
-                  self.config.server.ssl.key ?
-                  'https:' :
-                  'http:';
-
-      self.mailer.dispatch(user.email, 'confirm', {
-        token: user.activator,
-        redirect: req.body.redirect,
-        url: proto + '//' + host + port
-      }, function(err) {
-        if (err) {
-          log.error('failed to send activation email, reason: %s', err.message);
-        }
-      });
-    }
-
     if (!req.body.pubkey) {
-      dispatchActivationEmail();
+      self._dispatchActivationEmail(user, req.body.redirect);
       return res.status(201).send(user.toObject());
     }
 
@@ -82,7 +88,7 @@ UsersRouter.prototype.createUser = function(req, res, next) {
         return next(new errors.BadRequestError(err.message));
       }
 
-      dispatchActivationEmail();
+      self._dispatchActivationEmail(user, req.body.redirect);
       res.status(201).send(merge(user.toObject(), {
         pubkey: pubkey.key
       }));
@@ -123,6 +129,38 @@ UsersRouter.prototype.confirmActivateUser = function(req, res, next) {
         res.send(user.toObject());
       }
     });
+  });
+};
+
+/**
+ * Reactivates a user account
+ * @param {http.IncomingMessage} req
+ * @param {http.ServerResponse} res
+ * @param {Function} next
+ */
+UsersRouter.prototype.reactivateUser = function(req, res, next) {
+  const self = this;
+  const User = this.storage.models.User;
+
+  log.info('sending account reactivation email to %s', req.body.email);
+
+  User.findOne({
+    _id: req.body.email
+  }, function(err, user) {
+    if (err) {
+      return next(new errors.InternalError(err.message));
+    }
+
+    if (!user) {
+      return next(new errors.NotFoundError('User not found'));
+    }
+
+    if (user.activated) {
+      return next(new errors.BadRequestError('User is already activated'));
+    }
+
+    self._dispactchActivationEmail(user, req.body.redirect);
+    res.status(201).send(user.toObject());
   });
 };
 
@@ -340,6 +378,7 @@ UsersRouter.prototype.confirmPasswordReset = function(req, res, next) {
 UsersRouter.prototype._definitions = function() {
   return [
     ['POST', '/users', rawbody, this.createUser],
+    ['POST', '/activations', rawbody, this.reactivateUser]
     ['GET', '/activations/:token', this.confirmActivateUser],
     ['DELETE', '/users/:id', this._verify, this.destroyUser],
     ['GET', '/deactivations/:token', this.confirmDestroyUser],
